@@ -1,6 +1,9 @@
 NEXT
 -----------------------------------
 
+- fix issue437 where assertion rewriting could cause pytest-xdist slaves
+  to collect different tests.
+
 - fix issue547 capsys/capfd also work when output capturing ("-s") is disabled.
 
 - address issue170: allow pytest.mark.xfail(...) to specify expected exceptions via
